# epirust

./: README.md
engine/: Cargo.toml  notes.md
engine/config/: default.json  york_baseline.json
engine/diagrams/: Population.puml
engine/load_census_data/: Cargo.toml
engine/load_census_data/src/: lib.rs  nomis_download.rs  parsing_error.rs  population_and_density_per_output_area.rs  table_144_enum_values.rs
engine/results/: convert_covid_dashboard_csv_to_epi.py  summary.md
engine/results/epi_rust_baseline/: york_baseline_2021-11-02T15:26:53.csv
engine/results/real_world_york/: ltla_2021-11-01.csv  york_actual_cases.csv  york_formatted_actual_cases.csv
engine/src/: agent.rs  allocation_map.rs  config.rs  disease.rs  disease_state_machine.rs  epidemiology_simulation.rs  main.rs
engine/src/census_geography/: household.rs  mod.rs  output_area.rs  parsing_error.rs  point.rs
engine/src/geography/: area.rs  grid.rs  mod.rs  point.rs  readme.md
engine/src/interventions/: mod.rs
engine/src/listeners/: disease_tracker.rs  listener.rs  mod.rs
engine/src/listeners/events/: citizen_state.rs  counts.rs
