[package]
name = "epirust"
version = "0.1.0"
authors = ["KJAYANTA <jayantak@thoughtworks.com>","Sam Ralph <sr1474@york.ac.uk"]
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
fnv = "1.0"
csv = "1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
rdkafka = { version = "0.23", features = ["cmake-build"] }
clap = "2.33"
ndarray = "0.13"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
chrono = "0.4"
geo-types = "0.4"
geo = "0.12"
geojson = "0.17"
plotters = "0.2"
log = "0.4"
env_logger = "0.7"
uuid = { version = "0.8", features = ["serde", "v4"] }

[profile.release]
opt-level = 3
